--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,12 @@
 @import-normalize; /* bring in normalize.css styles */
 
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  list-style: none;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
